--- a/packages/ui/src/ShoppingList.module.css
+++ b/packages/ui/src/ShoppingList.module.css
@@ -1,5 +1,7 @@
 .shoppingList {
+  flex: 1;
   display: flex;
+  flex-direction: column;
 }
 
 .recipe > .closeBtn {
@@ -16,4 +18,8 @@
 .crafts {
   display: flex;
   flex-wrap: wrap;
+}
+
+.savedCrafts {
+  display: flex;
 }
