--- a/packages/ui/src/Recipe.module.css
+++ b/packages/ui/src/Recipe.module.css
@@ -10,3 +10,24 @@
 .done .ingredients {
   display: none;
 }
+
+.header {
+  display: flex;
+  align-items: center;
+  margin-top: -2em;
+  margin-left: -2em;
+}
+
+.title {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 0.2em;
+}
+
+.ingredients {
+  margin: 0;
+}
+
+.job {
+  color: #757575;
+}
